devel
-----
* Fix internal issue #742: Add tick storage in index meta payload after 
  truncate operation

* Fixed: During a move-shard job which moves the leader there is a
  situation in which the old owner of a shard can reclaim ownership
  (after having resigned already), with a small race where it allows to
  write documents only locally, but then continue the move-shard to a
  server without those documents. An additional bug in the MoveShard
  Supervision job would then leave the shard in a bad configuration
  with a resigned leader permanently in charge.

* Fixed issue #12304: insert in transaction causing com.arangodb.ArangoDBException: 
  Response: 500, Error: 4 - Builder value not yet sealed. 

  This happened when too deeply-nested documents (more than 63 levels of nesting)
  were inserted. While indefinite nesting is still not supported, the error message
  has been corrected from the internal HTTP 500 error "Builder value not yet sealed"
  to the correct HTTP 400 "Bad parameter".

* Show optimizer rules with highest execution times in explain output.

* Fixed that dropping a vanished follower works again. An exception response
  to the replication request is now handled properly.

* Fixed bad behaviour in agency supervision in some corner cases involving
  already resigned leaders in Current.

* Fixed a problem with potentially lost updates because a failover could
  happen at a wrong time or a restarted leader could come back at an
  unlucky time.

* Fixed issue BTS-168: Fixed undefined behaviour that did trigger
  segfaults on cluster startups. It is only witnessed for
  MacOS based builds. The issue could be triggered by any network connection.
  This behaviour is not part of any released version.

* Fixed issue ES-664: the optimizer rule `inline-subqueries` must pull out
  subqueries that contains a COLLECT statement if the subquery is itself called
	from within a loop. Otherwise the COLLECT will be applied to the values in the