@@ -54,6 +54,100 @@ function optimizerCostsTestSuite () {
     },
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief test cost of LimitNode
+////////////////////////////////////////////////////////////////////////////////
+
+    testLimitNodeCost : function () {
+      const query = "FOR i IN 1..10000 LIMIT @offset, @limit RETURN i";
+
+      // [ offset, limit, expected number of items ]
+      let tests = [ 
+        [ 0, 0, 0 ],
+        [ 0, 1, 1 ],
+        [ 0, 10, 10 ],
+        [ 0, 100, 100 ],
+        [ 0, 1000, 1000 ],
+        [ 0, 9999, 9999 ],
+        [ 0, 10000, 10000 ],
+        [ 0, 100000, 10000 ],
+        [ 0, 1000000, 10000 ],
+        [ 0, 10000000, 10000 ],
+        [ 0, 100000000, 10000 ],
+        [ 1, 0, 0 ],
+        [ 1, 1, 1 ],
+        [ 1, 10, 10 ],
+        [ 1, 100, 100 ],
+        [ 1, 1000, 1000 ],
+        [ 1, 9999, 9999 ],
+        [ 1, 10000, 9999 ],
+        [ 1, 100000, 9999 ],
+        [ 1, 1000000000, 9999 ],
+        [ 10, 0, 0 ],
+        [ 10, 1, 1 ],
+        [ 10, 10, 10 ],
+        [ 10, 100, 100 ],
+        [ 10, 9999, 9990 ],
+        [ 10, 10000, 9990 ],
+        [ 10, 1000000000, 9990 ],
+        [ 1000, 0, 0 ],
+        [ 1000, 1, 1 ],
+        [ 1000, 1000, 1000 ],
+        [ 1000, 9999, 9000 ],
+        [ 1000, 10000, 9000 ],
+        [ 1000, 1000000000, 9000 ],
+        [ 5000, 0, 0 ],
+        [ 5000, 1, 1 ],
+        [ 5000, 1000, 1000 ],
+        [ 5000, 9999, 5000 ],
+        [ 5000, 10000, 5000 ],
+        [ 5000, 1000000000, 5000 ],
+        [ 9999, 0, 0 ],
+        [ 9999, 1, 1 ],
+        [ 9999, 2, 1 ],
+        [ 9999, 10, 1 ],
+        [ 9999, 1000, 1 ],
+        [ 9999, 10000, 1 ],
+        [ 9999, 1000000, 1 ],
+        [ 10000, 0, 0 ],
+        [ 10000, 1, 0 ],
+        [ 10000, 2, 0 ],
+        [ 10000, 10, 0 ],
+        [ 10000, 100, 0 ],
+        [ 10000, 1000, 0 ],
+        [ 10000, 10000, 0 ],
+        [ 10000, 100000, 0 ],
+        [ 10000, 1000000, 0 ],
+        [ 10000, 10000000, 0 ],
+        [ 10000, 10000000000000, 0 ],
+        [ 10000000, 0, 0 ],
+        [ 10000000, 1, 0 ],
+        [ 10000000, 2, 0 ],
+        [ 10000000, 10, 0 ],
+        [ 10000000, 100, 0 ],
+        [ 10000000, 1000, 0 ],
+        [ 10000000, 10000, 0 ],
+        [ 10000000, 100000, 0 ],
+        [ 10000000, 1000000, 0 ],
+        [ 10000000, 10000000, 0 ],
+        [ 10000000, 10000000000000, 0 ],
+        [ 100000000000, 0, 0 ],
+        [ 100000000000, 10, 0 ],
+        [ 100000000000, 1000, 0 ],
+        [ 100000000000, 10000000, 0 ],
+        [ 100000000000, 10000000000000, 0 ],
+      ];
+
+      tests.forEach(function(test) {
+        let plan = AQL_EXPLAIN(query, { offset: test[0], limit: test[1] });
+        let node = helper.findExecutionNodes(plan, "LimitNode")[0];
+
+        // number of nodes cannot be estimated properly due to function call
+        assertEqual("LimitNode", node.type);
+        assertEqual(test[2], node.estimatedNrItems);
+      });
+    },
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief test cost of EnumerateListNode
 ////////////////////////////////////////////////////////////////////////////////
 
